--- a/styles.css
+++ b/styles.css
@@ -57,3 +57,16 @@ html {
   border-top: 5px double white;
   border-bottom: 5px double white;
 }
+
+.about-section {
+  background-color: whitesmoke;
+}
+
+.about-image {
+  max-height: 80%;
+  border: 6px solid slategray;
+}
+
+.text-alight-reset {
+  text-align: initial;
+}
