--- a/styles.css
+++ b/styles.css
@@ -78,3 +78,11 @@ html {
 .projects-section {
   background-color: snow;
 }
+
+.contact-section {
+  background-color: #303b43;
+}
+
+.blue-text {
+  color: lightblue;
+}
